tests/transpiler/x/kt/json_builtin.error
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
tests/transpiler/x/kt/json_builtin.kt:3:5: error: unresolved reference: json
    json(m)
    ^
